2003-07-16  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPack.c (ConfigureSlaves): silence compiler warning
	[Bug 771982]

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinImage.c (XGetImage): correct init of biSizeImage in
	bitmap header. [Bug 703697] (cap)

2003-07-17  Peter Spjuth  <peter.spjuth@space.se>

	* tests/frame.test:
	* generic/tkFrame.c (CreateFrame): Make sure all options can be set
	to their default value. [Bug #697652]

2003-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkPanedWindow.c (ArrangePanes): Ensure that the last pane
	* tests/panedwindow.test: shrinks instead of being clipped when
	resized below the reqsize. [Bug 748277] (spjuth)

	* generic/tkWindow.c (Initialize): do not free uninit'ed dstring.
	[Bug 755906] (mistachkin)

2003-07-15  Mo DeJong  <mdejong@users.sourceforge.net>

	* unix/tkUnixEvent.c (TkpCloseDisplay): Don't
	test for XCloseIM bug when the XFree86 version
	is newer than 4.0 since the layout of the
	XIM structure has changed. The check is not
	needed for newer XFree86 releases since
	the bug we are checking for was fixed in
	the 4.2.99.2 release. [Bug 755530]

2003-07-15  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bumped patchlevel to 8.4.4 in preparation
	* generic/tk.h:		for the Tk 8.4.4 release.
	* macosx/Wish.pbproj/project.pbxproj:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.13)
	* win/configure:

2003-07-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkMenu.c
	* generic/tkMenu.h
	* generic/tkMenuDraw.c: 
	* tests/menu.test: fixed complex bug in menu clone cleanup
	[Bug#465324] and removed 'knownBug' from a test.
        (This was applied to cvs head on 2003-05-03).
	
2003-07-09  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/send.test: Strengthened constraints to stop accidental
	smashing of Xserver access; some systems (*ahem* mine *ahem*)
	require xhost-style security for all use...  :^/
