@@ -1,3 +1,10 @@
+2003-07-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkImgPhoto.c (ImgPhotoCmd): Rewrote subcommand processing
+	to never jump to the end of the switch.  I find that confusing as
+	I can't see whether there's processing still to be done from a
+	quick glance at the code, unlike with a direct return. [Bug 771988]
+
 2003-07-16  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tkPack.c (ConfigureSlaves): silence compiler warning
